Infrastructure/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: preprod
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/service2/
        backend:
          serviceName: service2
          servicePort: 80
      - path: /api/service1
        backend:
          serviceName: service1
          servicePort: 8001
---
kind: Service
apiVersion: v1
metadata:
  namespace: preprod
  name: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: http
 # - name: https
 #   port: 443
 #   targetPort: https
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: preprod
  name: ingress-nginx
spec:
  replicas: 1
  template:
    metadata:
      namespace: preprod
      labels:
        app: ingress-nginx
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        name: ingress-nginx
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
      #    - name: https
      #      containerPort: 443
      #      protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        args:
        - /nginx-ingress-controller
        - --default-backend-service=preprod/nginx-default-backend
        - --configmap=preprod/nginx-ingress-config
---
kind: Service
apiVersion: v1
metadata:
  namespace: preprod
  name: nginx-default-backend
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: nginx-default-backend
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: preprod
  name: nginx-default-backend
spec:
  replicas: 1
  template:
    metadata:
      namespace: preprod
      labels:
        app: nginx-default-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
